--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -1,5 +1,15 @@
 @import "~bootstrap/scss/functions";
 @import "./helpers/variables";
 @import "~bootstrap/scss/mixins";
-
 @import "~bootstrap/scss/bootstrap";
+@import "./helpers/var";
+@import "./helpers/mixin";
+@import "./helpers/module";
+@import "./helpers/layout";
+@import "./helpers/page/index";
+@import "./helpers/page/category/products";
+@import "./helpers/page/category/category";
+@import "./helpers/page/eachproduct";
+@import "./helpers/page/cart/list";
+@import "./helpers/page/cart/fill";
+@import "./helpers/page/cart/checkout";
