--- a/src/assets/all.scss
+++ b/src/assets/all.scss
@@ -10,6 +10,7 @@
 @import "./helpers/page/index";
 @import "./helpers/page/category/products";
 @import "./helpers/page/category/category";
+@import "./helpers/page/favorite";
 @import "./helpers/page/eachproduct";
 @import "./helpers/page/cart/list";
 @import "./helpers/page/cart/fill";
