--- a/src/assets/helpers/page/cart/_list.scss
+++ b/src/assets/helpers/page/cart/_list.scss
@@ -68,9 +68,17 @@
       background-color: $maincolor;
     }
   }
+  .spin{
+    margin-top: 16%;
+    margin-bottom: 16%;
+    text-align: center;
+    .spinner-border{
+      width: 60px;
+      height: 60px;
+    }
+  }
   .nothing{
     text-align: center;
-    background-color: $backgroundcolor;
     padding-top: 7%;
     padding-bottom: 8%;
     i{
