--- a/src/assets/helpers/page/cart/_fill.scss
+++ b/src/assets/helpers/page/cart/_fill.scss
@@ -1,6 +1,6 @@
 .fill-in{
   width: 75.7%;
-  margin-top: 150px;
+  margin-top: 5%;
   margin-bottom: 2.5%;
   .flow-container{
     margin-bottom: 5%;
