--- a/src/assets/helpers/_layout.scss
+++ b/src/assets/helpers/_layout.scss
@@ -3,28 +3,24 @@ marquee{
   background-color: $maincolor;
   position: fixed;
   top: 0;
-  z-index: 999;
+  z-index: 99;
 }
 .navbar{
-  position: fixed;
+  position: sticky;
   width: 100%;
+  padding-left: 12%;
+  padding-right: 11%;
   top: 32px;
-  z-index: 999;
+  z-index: 99;
   box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.1);
-  @include phone(){
-    display: flex;
-    flex-wrap: wrap;
-    text-align: center;
-  }
   .logo{
-    margin-left: 12.3%;
     @include phone(){
-      margin-left: 38.7%;
+      margin-left: 0;
     }
     img{
       height: 40px;
       @include phone(){
-        height: 30px;
+        height: 25px;
       }
     }
   }
@@ -43,7 +39,6 @@ marquee{
     }
   }
   .right{
-    margin-right: 16.6%;
     @include phone(){
       margin-right: 0;
     }
@@ -71,6 +66,9 @@ footer{
     padding-bottom: 1%;
     a{
       font-size: 28px;
+      @include phone(){
+        font-size: 18px;
+      }
     }
   }
   .credit{
@@ -99,6 +97,9 @@ footer{
     }
     p{
       display: inline-block;
+      @include phone(){
+        font-size: 12px;
+      }
     }
   }
   .copyright{
@@ -107,6 +108,9 @@ footer{
     padding-bottom: 1%;
     p{
       display: inline-block;
+      @include phone(){
+        font-size: 12px;
+      }
     }
   }
 }
