--- a/src/assets/scss/helpers/_layout.scss
+++ b/src/assets/scss/helpers/_layout.scss
@@ -3,6 +3,7 @@
   width: 100%;
   z-index: 99;
   box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.1);
+  padding-top: 0;
   display: flex;
   flex-direction: column;
   marquee{
